syntax = "proto3";
package com.github.influxdata.influxdb.services.storage;
option go_package = "storage";

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message ReadSource {
  // OrgID specifies the organization identifier for this request.
  uint64 org_id = 1 [(gogoproto.customname) = "OrgID"];

  // BucketID specifies the bucket in the organization.
  uint64 bucket_id = 2 [(gogoproto.customname) = "BucketID"];
}
